Change not to publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "libplamo"
 version = "0.1.0"
 authors = ["Shogo Otake <shogo.otake@gmail.com>"]
 edition = "2018"
+publish = false
 
 [lib]
 name = "plamo"
